syntax = "proto3";

option csharp_namespace = "SchedulerService";

package scheduler;

// Modelul unui task
message TaskResponse {
  string id = 1;
  string name = 2;
  bool isRunning = 3;
}

// Request pentru creare task
message TaskRequest {
  string id = 1;
  string name = 2;
}

// Request pentru ștergere task
message TaskDeleteRequest {
  string id = 1;
}

// Request doar cu ID (pentru schedule/unschedule)
message TaskId {
  string id = 1;
}

// Răspuns pentru listă de taskuri
message TaskListResponse {
  repeated TaskResponse tasks = 1;
}

// Serviciul gRPC
service TaskScheduler {
  rpc CreateTask (TaskRequest) returns (TaskResponse);
  rpc DeleteTask (TaskDeleteRequest) returns (.google.protobuf.Empty);
  rpc GetAllTasks (.google.protobuf.Empty) returns (TaskListResponse);
  rpc GetRunningTasks (.google.protobuf.Empty) returns (TaskListResponse);
  rpc ScheduleTask (TaskId) returns (.google.protobuf.Empty);
  rpc UnscheduleTask (TaskId) returns (.google.protobuf.Empty);
}
